English version of the presentation. Updated samples.